--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
           <ul class="main-menu-list">
             <li>
               <a class="catalog" href="catalog.html">каталог товаров</a>
-              <ul class="catalog-list">
+              <ul class="header-catalog-list display-none">
                 <li>
-                  <a class="catalog-item" href="#">Виртуальная реальность</a>
+                  <a class="header-catalog-item" href="#">Виртуальная реальность</a>
                 </li>
                 <li>
-                  <a class="catalog-item" href="#">Моноподы для селфи</a>
+                  <a class="header-catalog-item" href="#">Моноподы для селфи</a>
                 </li>
                 <li>
-                  <a class="catalog-item" href="#">Экшн-камеры</a>
+                  <a class="header-catalog-item" href="#">Экшн-камеры</a>
                 </li>
                 <li>
-                  <a class="catalog-item" href="#">Фитнес-браслеты</a>
+                  <a class="header-catalog-item" href="#">Фитнес-браслеты</a>
                 </li>
                 <li>
-                  <a class="catalog-item" href="#">Умные часы</a>
+                  <a class="header-catalog-item" href="#">Умные часы</a>
                 </li>
                 <li>
-                  <a class="catalog-item" href="#">Квадрокоптер</a>
+                  <a class="header-catalog-item" href="#">Квадрокоптер</a>
                 </li>
               </ul>
             </li>
@@ -79,6 +79,7 @@
           </ul>
         </div>
       </div>
+
 
     </nav>
   </header>
@@ -275,7 +276,7 @@
       <div class="footer-first-level">
 
         <a>
-          <img class="footer-logo" src="img/logo/logo.svg" width="163" height="35" alt="Логотип «DEVICE»">
+          <img class="footer-logo" src="img/logo/logo_footer.svg" width="163" height="35" alt="Логотип «DEVICE»">
         </a>
 
         <ul class="footer-site-navigation">
